@@ -5,6 +5,7 @@ import java.io.IOException;
 import java.io.Reader;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
@@ -74,7 +75,7 @@ public class CRMSRunner {
                 throw new IllegalArgumentException("CRMSRunner expecting a single argument: input file");
             }
 
-            Path input = Path.of(args[0]);
+            Path input = Paths.get(args[0]);
 
             if (!Files.exists(input)) {
                 throw new IllegalArgumentException("Given path doesn't exist: " + input.toString());
@@ -88,7 +89,7 @@ public class CRMSRunner {
                 throw new IllegalArgumentException("Given path doesn't contain valid json");
             }
 
-            Path output = Path.of(args[1]);
+            Path output = Paths.get(args[1]);
             if (Files.exists(output)) {
                 throw new IllegalArgumentException("Given output path already exist: " + output.toString());
             }
